force-app/main/default/objects/Utility_Bar_Link__mdt/Utility_Bar_Link__mdt.object-meta.xml
<CustomObject>
    <label>Utility Bar Link</label>
    <pluralLabel>Utility Bar Links</pluralLabel>
</CustomObject>