force-app/main/default/objects/Utility_Bar_Link__mdt/fields/Active_Link__c.field-meta.xml
<CustomField>
    <fullName>Active_Link__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Link</label>
    <type>Checkbox</type>
</CustomField>