force-app/main/default/objects/Utility_Bar_Link__mdt/fields/Open_in_console_tab__c.field-meta.xml
<CustomField>
    <fullName>Open_in_console_tab__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open in console tab</label>
    <type>Checkbox</type>
</CustomField>